Get uptime plot working.

--- a/manage_pets/templates/manage_pets/show_pet.html
+++ b/manage_pets/templates/manage_pets/show_pet.html
@@ -163,6 +163,8 @@
     <br>
     <h1 style="text-align: center;">Traffic</h1>
     <img src="data:image/png;base64, {{traffic_data_webp}}" alt="Traffic Data Plot" />
+    <h1 style="text-align: center;">Up Time</h1>
+    <img src="data:image/png;base64, {{up_time_webp}}" alt="Up Time Plot" />
     <br>
     <form action="/delete_pet/{{pet_data.name}}" method="post" onSubmit="return onDelete()">
       <input type="submit" value="Delete">
