Add relationship view.

--- a/manage_pets/templates/manage_pets/manage_pets.html
+++ b/manage_pets/templates/manage_pets/manage_pets.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>Tamagotchi</title>
+  <!-- TODO: Host these locally? -->
   <!-- Include Choices CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
   <!-- Include Choices JavaScript (latest) -->
