Cleanup favicon, and tutorial leftovers.

--- a/manage_pets/templates/manage_pets/edit_pet.html
+++ b/manage_pets/templates/manage_pets/edit_pet.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Edit {{pet.name}} Description</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   </head>
   <body>
     <form method="post">
