--- a/manage_pets/templates/manage_pets/view_relationships.html
+++ b/manage_pets/templates/manage_pets/view_relationships.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Pet Relationships</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <!-- https://visjs.github.io/vis-network/examples/  -->
     <script
       type="text/javascript"
