--- a/manage_pets/templates/manage_pets/manage_pets.html
+++ b/manage_pets/templates/manage_pets/manage_pets.html
@@ -9,10 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
   <!-- Include Choices JavaScript (latest) -->
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-
-
-
   <link href='https://fonts.googleapis.com/css?family=Silkscreen' rel='stylesheet'>
+  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <script>
     {% autoescape off %}
     var data1 = [
