--- a/manage_pets/templates/manage_pets/view_pet.html
+++ b/manage_pets/templates/manage_pets/view_pet.html
@@ -162,15 +162,14 @@
         {% endfor %}
     </div>
     <h1 style="text-align: center;">Description</h1>
+    <div style="border:1px solid black;">
+    {% autoescape off %}
+    {{description}}
+    {% endautoescape %}
+    </div>
     <form action="/edit_pet/{{pet_data.name}}">
       <input type="submit" value="Edit Description">
     </form>
-    <div style="border:1px solid black;">
-    {% autoescape off %}
-    {{pet_data.description}}
-    {% endautoescape %}
-    </div>
-    <br>
     {% if traffic_data_webp != None %}
     <h1 style="text-align: center;">Traffic</h1>
     <img src="data:image/png;base64, {{traffic_data_webp}}" alt="Traffic Data Plot" />
