--- a/manage_pets/templates/manage_pets/manage_pets.html
+++ b/manage_pets/templates/manage_pets/manage_pets.html
@@ -251,7 +251,7 @@
 </head>
 
 <body>
-  {% include "./header.html" with nav="manage_pets.html" %}
+  {% include "./header.html" with nav="manage_pets" %}
 
   <caption>Friends</caption>
   <div class="table" id="table-friends">
