--- a/manage_pets/templates/manage_pets/view_pet.html
+++ b/manage_pets/templates/manage_pets/view_pet.html
@@ -136,7 +136,7 @@
 </script>
 
 <body>
-  {% include "./header.html" with nav="manage_pets.html" %}
+  {% include "./header.html" with nav="view_pet" %}
     <h1 style="text-align: center;">{{pet_data.name}}</h1>
     <div style="border: thick double #32a1ce;float:left;">
         <h2 >MAC</h2>
