--- a/manage_pets/templates/manage_pets/view_relationships.html
+++ b/manage_pets/templates/manage_pets/view_relationships.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    {% include "./header.html" with nav="manage_pets.html" %}
+    {% include "./header.html" with nav="view_relationships" %}
     <div id="mynetwork"></div>
 
     <h2 id="eventSpanHeading"></h2>
