--- a/manage_pets/templates/manage_pets/view_history.html
+++ b/manage_pets/templates/manage_pets/view_history.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   </head>
   <body>
-    {% include "./header.html" with nav="manage_pets.html" %}
+    {% include "./header.html" with nav="view_history" %}
     <pre>{{display_data}}</pre>
   </body>
 </html>
