Update algorithm type.

--- a/manage_pets/templates/manage_pets/view_relationships.html
+++ b/manage_pets/templates/manage_pets/view_relationships.html
@@ -36,7 +36,8 @@
       // create an array with edges
       var edges = new vis.DataSet([
       {% for relationship in relationships %}
-        { from: "{{relationship.0}}", to: "{{relationship.1}}", label: "{{relationship.2}}" },
+        // Label makes graph a bit too crowded. Use color, or hover?
+        { from: "{{relationship.0}}", to: "{{relationship.1}}" },
       {% endfor %}
       ]);
 
