Refactor to support other primary identifiers, and nmap for discovery. WIP lots o bugs.

--- a/manage_pets/templates/manage_pets/view_pet.html
+++ b/manage_pets/templates/manage_pets/view_pet.html
@@ -140,9 +140,9 @@
     <h1 style="text-align: center;">{{pet_data.name}}</h1>
     <div style="border: thick double #32a1ce;float:left;">
         <h2 >MAC</h2>
-        <p>{{router_info.mac}}</p>
+        <p>{{device_info.mac}}</p>
         <h2 >IP</h2>
-        <p>{{router_info.ip}}</p>
+        <p>{{device_info.ip}}</p>
         <h2 >Percent Uptime</h2>
         <p>{{mean_uptime|floatformat:"1"}}%</p>
         <h2 >Transmit Rate</h2>
