--- a/manage_pets/templates/manage_pets/header.html
+++ b/manage_pets/templates/manage_pets/header.html
@@ -61,6 +61,7 @@
     <a href="#default" class="logo">Lan Pets</a>
     <div class="header-right">
       <a id="manage_pets" href="/manage_pets">Manage</a>
+      <a id="view_data_usage" href="/view_data_usage">Data Usage</a>
       <a id="view_relationships" href="/view_relationships">Relationships</a>
       <a id="view_history" href="/view_history">History</a>
     </div>
