Do some basic layout improvements.

--- a/manage_pets/templates/manage_pets/manage_pets.html
+++ b/manage_pets/templates/manage_pets/manage_pets.html
@@ -186,6 +186,9 @@
 
     .td {
       display: table-cell;
+      padding-right: 10px;
+      max-width:200px;
+      word-break: break-all;
       vertical-align: middle;
     }
 
